# demo-bazel

./: BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
src/: BUILD  index.html  index.ts
src/functions/: BUILD  index.ts
src/utils/: BUILD
